--- a/src/style/Shortsleeve.css
+++ b/src/style/Shortsleeve.css
@@ -1,7 +1,5 @@
 .ShortSleeveContainer {
     position: relative;
-    margin-top: 17.5%;
-    margin-left: 42.5%;
     width: 425px;
     height: 300px;
     background-color: white;
@@ -61,10 +59,33 @@
 
 .ShortSleeveGrid {
     position: absolute;
-    margin-left: 19.7%;
+    margin-left: 26%;
     margin-top: 10%;
     display: grid;
     grid-template-columns:  1fr 1fr;
     grid-template-rows: 1fr 1fr;
     column-gap: 2rem;
+    overflow: scroll;
+    overflow-x: hidden;
+    max-height: 65%;
+    row-gap: 1rem;
+    padding: 1rem;
+}
+
+.ShortSleeveGrid::-webkit-scrollbar {
+    width: 10px;
+}
+
+.ShortSleeveGrid::-webkit-scrollbar-thumb {
+    background: grey;
+    border-radius: 10px;
+}
+
+.ProductContainerShortSleeve {
+    display: block;
+    height: 100%;
+    width: 100%;
+    background-color: blue;
+    z-index: 1500;
+    border: solid 10px black;
 }
